@@ -1,3 +1,9 @@
+2014-07-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/61725
+	* gcc.dg/tree-ssa/vrp93.c: New test.
+	* gcc.c-torture/execute/pr61725.c: New test.
+
 2014-07-08  Richard Biener  <rguenther@suse.de>
 
 	* tree-ssa-dom.h (loop_depth_of_name): Remove.
