@@ -1,3 +1,10 @@
+2014-07-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/61725
+	* tree-vrp.c (extract_range_basic): Don't assume vr0 is unsigned
+	range, use range_includes_zerop_p instead of integer_zerop on
+	vr0->min, only use log2 of max if min is not negative.
+
 2014-07-08  Richard Biener  <rguenther@suse.de>
 
 	* tree-ssa-dom.h (loop_depth_of_name): Remove.
